@@ -135,3 +135,6 @@
 	  built in command.
 
 6.13 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+* apps/netutils/dhcpd/dhcpd.c: Fix several problems using host order address
+  where network addresses expected (and vice versa).
